--- a/package.json
+++ b/package.json
@@ -49,6 +49,7 @@
     "karma-webpack": "^1.7.0",
     "minimist": "^1.2.0",
     "mocha": "^3.0.0",
+    "node-sass": "^4.5.0",
     "null-loader": "^0.1.1",
     "open": "0.0.5",
     "phantomjs-prebuilt": "^2.0.0",
@@ -63,6 +64,7 @@
   "dependencies": {
     "core-js": "^2.0.0",
     "normalize.css": "^4.0.0",
+    "office-ui-fabric-react": "^1.14.1",
     "react": "^15.0.0",
     "react-dom": "^15.0.0"
   }
