--- a/package.json
+++ b/package.json
@@ -63,6 +63,7 @@
     "webpack-dev-server": "^1.12.0"
   },
   "dependencies": {
+    "cookies-js": "^1.2.3",
     "core-js": "^2.0.0",
     "es6-symbol": "^3.1.0",
     "normalize.css": "^4.0.0",
