--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "serve": "node server.js --env=dev",
     "serve:dist": "node server.js --env=dist",
     "start": "node server.js --env=dev",
+    "start-office": "browser-sync start --config bsconfig.json",
     "test": "karma start",
     "test:watch": "karma start --autoWatch=true --singleRun=false"
   },
@@ -63,6 +64,7 @@
     "webpack-dev-server": "^1.12.0"
   },
   "dependencies": {
+    "browser-sync": "^2.18.8",
     "cookies-js": "^1.2.3",
     "core-js": "^2.0.0",
     "es6-symbol": "^3.1.0",
